# torneig-futbol

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LINTING.md  README.md  alembic.ini  conftest.py  mypy.ini  pyproject.toml  pytest.ini  test.db  torneig_futbol.db
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  api.py  crud_base.py  goal.py  group.py  match.py  phase.py  player.py  player_stats.py  standings.py  team.py  team_stats.py  tournament.py
app/api/endpoints/: players.py  tournaments.py
app/core/: standings.py
app/crud/: __init__.py  goal.py  match.py  player_stats.py  team_stats.py
app/db/: database.py
app/models/: __init__.py  goal.py  group.py  match.py  phase.py  player.py  player_stats.py  team.py  team_stats.py  tournament.py
app/schemas/: __init__.py  goal.py  group.py  match.py  phase.py  player.py  player_stats.py  team.py  team_standing.py  team_stats.py  tournament.py
app/static/css/: main.css  style.css  styles.css
app/static/js/: main.js
app/templates/: base.html  index.html  player_stats.html
app/templates/goals/: index.html
app/templates/matches/: create.html  list.html  result.html  view.html
app/templates/player_stats/: list.html
app/templates/players/: detail.html  index.html
app/templates/stats/: overview.html
app/templates/teams/: detail.html  list.html  view.html
app/templates/tournaments/: create.html  list.html  view.html
app/tests/: conftest.py  fixtures.py  test_api_configuration.py  test_api_endpoints_integration.py  test_api_router.py  test_crud_base.py  test_goal_tracking.py  test_group_crud.py  test_group_team.py  test_laliga_scenario.py  test_match.py  test_match_workflow.py  test_player.py  test_player_stats.py  test_player_stats_api.py  test_player_stats_crud.py  test_standings.py  test_team.py  test_team_stats.py  test_tournament.py  test_ui_router.py  test_ui_router_extended.py
app/tests/utils/: utils.py
app/ui/: __init__.py  ui_router.py
docs/: api.md  api_examples.md  architecture.md  development_approach.md  development_workflow.md  error_handling.md  frontend.md  implementation.md  match_management.md
docs/postman/: soccer_tournament_api.postman_collection.json  soccer_tournament_api.postman_environment.json
frontend/: package-lock.json  package.json
migrations/: README  env.py
migrations/versions/: 13c5335ecbcd_add_team_stats_model.py  1611794bd5b8_add_goal_model.py  7f4e138776cb_add_team_stats_table.py  b0baafa352d5_initial_database_schema.py  bca1226e27e8_initial_database_schema.py  manual_add_playerstats_model.py
scripts/: README.md  create_release.sh  create_tables.py  init_db.py  setup_dev.sh  test_goal_tracking.py  test_match_workflow.py  test_player_stats.py  test_team_stats.py  update_player_stats.py
src/: App.tsx  theme.ts
src/components/layout/: AppLayout.tsx  MobileNav.tsx
src/store/: index.ts  tournamentSlice.ts
